k8s/c2/03-ledger-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-db
  namespace: boa
  labels:
    application: bank-of-anthos
    team: ledger
    tier: db
spec:
  ports:
    - name: tcp
      port: 5432
      targetPort: 5432
  selector:
    app: ledger-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ledger-db
  namespace: boa
  labels:
    application: bank-of-anthos
    team: ledger
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-db
  serviceName: ledger-db
  template:
    metadata:
      labels:
        app: ledger-db
        application: bank-of-anthos
        team: ledger
        tier: db
    spec:
      containers:
        - name: postgres
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/ledger-db:v0.6.10@sha256:891cb7afe34f358ce7ed7002a1923b25e113b30bca44fecb10cc8b116d665a03
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
              subPath: postgres
      serviceAccountName: bank-of-anthos
      volumes:
        - name: postgresdb
          emptyDir: {}
