k8s/c2/06-transactionhistory.yaml
# Adapted from upstream transaction-history.yaml — same internal-NLB
# pattern as ledgerwriter (see comments there).

apiVersion: v1
kind: Service
metadata:
  name: transactionhistory
  namespace: boa
  labels:
    application: bank-of-anthos
    team: ledger
    tier: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-name: "boa-challenge-c2-txnhistory"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: transactionhistory
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionhistory
  namespace: boa
  labels:
    application: bank-of-anthos
    team: ledger
    tier: backend
spec:
  selector:
    matchLabels:
      app: transactionhistory
  template:
    metadata:
      labels:
        app: transactionhistory
        application: bank-of-anthos
        team: ledger
        tier: backend
    spec:
      containers:
        - name: transactionhistory
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/transactionhistory:v0.6.10@sha256:109cdad9c29a46af2708574ac4635dd73afa30cc020a4fef0266abcde87db744
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /healthy
              port: 8080
            periodSeconds: 10
            failureThreshold: 30
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["all"]
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /tmp/.ssh
              name: publickey
              readOnly: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: bank-of-anthos
      terminationGracePeriodSeconds: 5
      volumes:
        - name: tmp
          emptyDir: {}
        - name: publickey
          secret:
            secretName: jwt-key
            items:
              - key: jwtRS256.key.pub
                path: publickey
